--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "@typescript-eslint/parser": "^5.55.0",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.8",
+    "@vue/eslint-config-typescript": "^9.1.0",
+    "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
     "eslint-plugin-vue": "^8.7.1",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.9.5",
     "vue-class-component": "^7.2.6",
+    "vue-loader": "^15.9.8",
     "vue-property-decorator": "^9.1.2",
     "vue-template-compiler": "^2.7.14"
   },
@@ -37,7 +42,8 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@vue/typescript"
     ],
     "parserOptions": {
       "parser": "@typescript-eslint/parser"
