--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
     "vue": "^2.7.14",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^9.1.2",
     "webpack": "^5.76.2"
   },
   "devDependencies": {
